# mkdocs-smoke-test

./: Cargo.toml  config.toml
.github/workflows/: release.yml
src/: main.rs
