[package]
name = "mkdocs-smoke-test"
version = "0.1.1"
authors = ["mitama <loligothick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
walkdir = "2.3.1"
clap = "2.33.3"
itertools = "0.9.0"
toml = "0.5.7"
serde = { version = "1.0.118", features = ["derive"] }
boolinator = "2.4.0"
once_cell = "1.5.2"
async-std = { version = "1.7.0", features = ["attributes"] }
